Remove decoration store endpoints and fix broken popup button on mobile

--- a/public/scss/components/_empty-content.scss
+++ b/public/scss/components/_empty-content.scss
@@ -8,7 +8,7 @@
     text-align: center;
     margin-left: 13rem;
     margin-top: 15rem;
-    
+
     .empty-img {
         width: 150px;
         height: 150px;
@@ -18,7 +18,7 @@
     }
 
     p {
-        margin: 10px 0;
+        margin: 1rem 13rem;
         font-size: 20px;
         font-family: "Poppins", sans-serif;
         font-weight: 400;
