--- a/public/scss/components/_popup.scss
+++ b/public/scss/components/_popup.scss
@@ -146,10 +146,10 @@
         outline: none;
         font-family: var(--font-family);
         font-size: 14px;
-        margin-bottom: 10px;
+        margin-bottom: 0rem;
         box-sizing: border-box;
         cursor: pointer;
-        margin-left: 10%;
+        margin-left: 4.60rem;
     }
 
     .popup-content {
